syntax = "proto3";
package wiradata.inventories;

option go_package = "pb/inventories;inventories";
option java_package = "com.wiradata.erpapplication.inventories";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";
import "inventories/delivery_detail_message.proto";

message Delivery {
  string id = 1;
  string branch_id = 3;
  string branch_name = 4;
  string sales_order_id = 5;
  string code = 6;
  google.protobuf.Timestamp delivery_date = 7;
  string remark = 8;
  google.protobuf.Timestamp created_at = 9;
  string created_by = 10;
  google.protobuf.Timestamp updated_at = 11;
  string updated_by = 12;
  repeated DeliveryDetail details = 13;
}